(wordstat) super cool fast fix for super fast feature